更新checkbox, radio, loadmore

--- a/example/pages/checkbox/index.wxml
+++ b/example/pages/checkbox/index.wxml
@@ -1,43 +1,23 @@
 <doc-page title="checkbox" without-padding>
-  <zan-panel title='基本用法'>
-    <zan-checkbox
-      checkbox-class="checkbox-demo"
-      bindchange="handleCheckboxChange"
-    >复选框</zan-checkbox>
-  </zan-panel>
-
-  <zan-panel title='禁用状态'>
-    <zan-checkbox
-      checkbox-class="checkbox-demo"
-      disabled
-      checked="{{ true }}"
-    >复选框</zan-checkbox>
-  </zan-panel>
-
-  <zan-panel title='禁用内容部分点击事件'>
-    <zan-checkbox
-      checkbox-class="checkbox-demo"
-      label-disabled
-    >复选框</zan-checkbox>
-  </zan-panel>
-
-  <zan-panel title='Checkbox组'>
-    <zan-checkbox-group>
-      <zan-checkbox
-        wx:for="{{ items }}"
-        wx:for-item="item"
-        wx:for-index="index"
-        wx:key="{{ value }}"
-        checked="{{ item.checked }}"
-        data-index="{{ index }}"
-        bindchange="handleCheckboxChange"
-      >复选框 {{ item.value }}</zan-checkbox>
+  <zan-panel title="group-水果">
+    <zan-checkbox-group current="{{current}}" bindchange="handleFruitChange">
+      <zan-checkbox wx:for="{{fruit}}" position="{{position}}" wx:key="{{item.id}}" value="{{item.name}}">
+      </zan-checkbox>
     </zan-checkbox-group>
   </zan-panel>
 
-  <zan-panel title='列表模式'>
-    <zan-checkbox type="list">复选框 a</zan-checkbox>
-    <zan-checkbox type="list">复选框 b</zan-checkbox>
-    <zan-checkbox type="list">复选框 c</zan-checkbox>
+  <zan-button bindclick="handleClick" type="ghost">切换复选框位置</zan-button>
+
+  <zan-panel title="checkbox-动物">
+    <zan-checkbox value="{{animal}}" disabled="{{disabled}}" checked="{{checked}}" bindchange="handleAnimalChange">
+    </zan-checkbox>
   </zan-panel>
+
+  <zan-panel title="checkbox-slot">
+    <zan-checkbox value="{{animal}}" disabled="{{disabled}}" checked="{{checked}}" bindchange="handleAnimalChange" valueSlot="{{ true }}">
+      abc
+    </zan-checkbox>
+  </zan-panel>
+
+  <zan-button bindclick="handleDisabled" type="ghost">切换disabled状态</zan-button>
 </doc-page>
