--- a/example/pages/radio/index.wxml
+++ b/example/pages/radio/index.wxml
@@ -1,35 +1,25 @@
 <doc-page title="radio" without-padding>
-  <zan-panel title='基本用法'>
-    <zan-radio
-      items="{{ items }}"
-    ></zan-radio>
+  <zan-panel title="group-水果">
+    <zan-radio-group current="{{current}}" bindchange="handleFruitChange">
+      <zan-radio wx:for="{{fruit}}" position="{{position}}" wx:key="{{item.id}}" value="{{item.name}}">
+      </zan-radio>
+    </zan-radio-group>
   </zan-panel>
 
-  <zan-panel title='禁用状态'>
-    <zan-radio
-      items="{{ items1 }}"
-    ></zan-radio>
+  <zan-panel title="radio-动物">
+    <zan-radio value="{{animal}}" disabled="{{disabled}}" checked="{{checked}}" bindchange="handleAnimalChange">
+    </zan-radio>
   </zan-panel>
 
-  <zan-panel title='事件'>
-    <zan-radio
-      items="{{ items }}"
-      bind:change="handleRadioChange"
-    ></zan-radio>
+  <zan-panel title="radio--value-slot">
+    <zan-radio value="{{animal}}" disabled="{{disabled}}" checked="{{checked}}" bindchange="handleAnimalChange" valueSlot="{{ true }}">
+      abc
+    </zan-radio>
   </zan-panel>
 
-  <zan-panel title='自定义样式'>
-    <zan-radio
-      items="{{ items }}"
-      radio-color="radio-color"
-      radio-class="radio-demo"
-    ></zan-radio>
-  </zan-panel>
+  <zan-button bindclick="handleClick" type="ghost">切换单选框位置</zan-button>
 
-  <zan-panel title='列表模式'>
-    <zan-radio
-      items="{{ items }}"
-      type="list"
-    ></zan-radio>
-  </zan-panel>
+  <zan-button bindclick="handleDisabled" type="ghost">切换disabled状态</zan-button>
 </doc-page>
+
+
