--- a/packages/dialog/index.pcss
+++ b/packages/dialog/index.pcss
@@ -19,9 +19,10 @@
 
   &__content {
     position: relative;
-    padding: 15px 20px;
+    padding: 30px 15 20px;
     line-height: 1.5;
     min-height: 40px;
+    text-align: center;
 
     &::after {
       @mixin hairline;
