--- a/packages/field/index.pcss
+++ b/packages/field/index.pcss
@@ -46,7 +46,8 @@
   }
 
   &__title {
-    color: #333;
+    color: #000000;
+    font-size: 17px;
     min-width: 65px;
     padding-right: 10px;
   }
@@ -57,7 +58,7 @@
     padding: 4px 0;
     min-height: 22px;
     height: auto;
-    font-size: 14px;
+    font-size: 17px;
 
     &--right {
       text-align: right;
@@ -65,7 +66,8 @@
   }
 
   &__placeholder {
-    font-size: 14px;
+    font-size: 17px;
+    color: #b2b2b2;
   }
 
   .zan-field__input--right {
