fix: stepper style

--- a/packages/stepper/index.pcss
+++ b/packages/stepper/index.pcss
@@ -3,7 +3,7 @@
 
   view {
     display: inline-block;
-    padding: 5px 0;
+    // padding: 5px 0;
     text-align: center;
     box-sizing: border-box;
     vertical-align: middle;
@@ -46,39 +46,42 @@
   &--small {
     view {
       min-width: 25px;
-      line-height: 29rpx;
+      height: 24px;
+      line-height: 24px;
     }
 
     .zan-stepper__text {
       width: 48px;
-      line-height: 52rpx;
-      height: 52rpx;
+      height: 24px;
+      line-height: 24px;
     }
   }
 
   &--middle {
     view {
       min-width: 27px;
-      line-height: 32rpx;
+      height:25px;
+      line-height: 25px;
     }
 
     .zan-stepper__text {
       width: 50px;
-      line-height: 56rpx;
-      height: 56rpx;
+      height:25px;
+      line-height: 25px;
     }
   }
 
   &--large {
     view {
       min-width: 29px;
-      line-height: 36rpx;
+      height: 32px;
+      line-height: 32px;
     }
 
     .zan-stepper__text {
       width: 52px;
-      line-height: 60rpx;
-      height: 60rpx;
+      height: 32px;
+      line-height: 32px;
     }
   }
 }
